test/Fail/Issue4399.err
Issue4399.agda:11,5-5
Issue4399.agda:11,5: Not a valid named argument: _ = tt
=<ERROR>
 A

-- Expected: Parse error
-...
